<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_sources"
            android:icon="@drawable/ic_filter"
            android:title="@string/filter_sources"
            tools:ignore="HardcodedText" />

        <item
            android:id="@+id/nav_mynews"
            android:icon="@drawable/ic_icons8_google_news"
            android:title="@string/insert_my_news"
            tools:ignore="HardcodedText" />


        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_info_black_24dp"
            android:title="@string/about"
            tools:ignore="HardcodedText" />

    </group>

</menu>
